<resources>
    <string name="app_name">HelloWorld</string>
    <string name="Superman">Superman</string>
    <string name="name">Clark Kent</string>
    <string name="poderes_superman">Powers : Super strength, flight, invulnerability, super speed, heat vision, freeze breath, x-ray vision, superhuman hearing, healing factor</string>
    <string name="todo">TODO</string>
    <string name="registro">Registro de un superheroe</string>
    <string name="email">Correo electronico</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre:</string>
    <string name="estatura">Estatura</string>
    <string name="nombre_info">"Nombre: %s, estatura: %f, email: %s, genero: %s, poderes: %s, ciudad: %s"</string>
    <string name="género">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="poderes">Poderes</string>
    <string name="super_fuerza">Super Fuerza</string>
    <string name="super_velocidad">Super Velocidad</string>
    <string name="telequinesis">Telequinesis</string>
    <string name="ciudad_nacimiento">Ciudad de Nacimiento</string>
    <string name="city">Metropolis</string>
    <string name="reporter">Reportero</string>
    <string name="facebook_exmple">facebook.com/superman</string>

    <string-array name="Lista_ciudades">
        <item>Ciudad Central</item>
        <item>Ciudad Gótica</item>
        <item>Temiscira</item>
        <item>Metrópolis</item>
    </string-array>

</resources>